--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,11 @@ title: "Home Page"
 description: "Welcome to my website"
 layout: "layouts/main"
 import Layout from '../layouts/Layout.astro';
+import "../styles/global.css";
 ---
 
 <Layout>
-	<h1>Portafolio</h1>
-	<p>esta es la vida</p>
+	<h1 class="text-3xl font-bold underline">
+		Hello world!
+	  </h1>
 </Layout>
