cambio color prueba

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import "../styles/global.css";
 ---
 
 <Layout>
-	<h1 class="text-3xl font-bold underline">
+	<h1 class="text-3xl font-bold underline text-amber-200">
 		Hello world!
 	  </h1>
 </Layout>
