error con layout fixed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,10 +26,10 @@ import "../styles/global.css";
 <style is:global>
 	:root{
 		color-scheme: dark;
-		---color-m1:#AA60C8;
-		---color-m2:#D69ADE;
-		---color-m3:#EABDE6;
-		---color-m4:#FFDFEF;
+		--color-m1:#AA60C8;
+		--color-m2:#D69ADE;
+		--color-m3:#EABDE6;
+		--color-m4:#FFDFEF;
 		
 
 	}
@@ -42,7 +42,7 @@ import "../styles/global.css";
 	}
 
 	.text-color-m1{
-		color: var(---color-m1);
+		color: var(--color-m1);
 	}
 
 	.bg-d1{
