--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+title: "HTML FORMAT AND HEADER"
+description: "A brief description of the layout"
 import '../styles/global.css'
 
 import Header from '../components/Header.astro'
@@ -30,9 +32,8 @@ import "../styles/global.css";
 		--color-m2:#D69ADE;
 		--color-m3:#EABDE6;
 		--color-m4:#FFDFEF;
-		
-
 	}
+
 	.bg-header{
 		background-color: #010001;
 	}
