--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -270,7 +270,7 @@ import "../styles/global.css";
 				
 				<div class=" border-2  border-d2  bg-neutral-950 shadow-xl p-6 relative rounded-2xl overflow-hidden group" >
 					
-					<img src="src/assets/SOFTEL.png" class=" w-[90%] h-auto m-auto rounded-2xl">
+					<img src="SOFTEL.png" class=" w-[90%] h-auto m-auto rounded-2xl">
 					<div class=" w-[400px] h-[100px] left-44  to-20%  -bottom-20 absolute -rotate-35 group-hover:-bottom-15  duration-700 transition-all transition-discrete ">
 						<div class="border-purple border-t-2  bg-gradient-to-r from-purple  h-[40px] group-hover:h-[25px] duration-700 transition-all transition-discrete"></div>
 						<div class=" border-purple border-t-2  bg-gradient-to-r from-purple h-[30px] group-hover:h-[40px] duration-700 transition-all transition-discrete"></div>
