sobre mi y favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import "../styles/global.css";
 			<div class="max-w-[600px]">
 				<h3 class="text-[16px] text-color-m1">Hola, Soy</h3>
 				<h1 class="text-3xl  mb-2.5">Jorge Humberto Gaviria Botero</h1>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusantium iste doloremque sit laboriosam repellat optio esse sint quo. Impedit alias assumenda ad quos hic ipsa! Earum qui neque nam.</p>
+				<p>Soy un apasionado por el manejo de datos, el diseño y la creación de software. Disfruto transformar ideas en soluciones funcionales, combinando creatividad y lógica para desarrollar proyectos eficientes y bien estructurados. Siempre estoy buscando aprender y mejorar, con enfoque en generar impacto a través de la tecnología.</p>
 				<div class="flex justify-center my-6 gap-x-6">
 					<a class="group p-3 bg-d1 border-1 opacity-70 hover:opacity-100 rounded-[10px] ho-1 relative cursor-pointer" href="#" onclick="copyToClipboard(event)">
 						<p class="flex items-center gap-x-2">
