--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/photo.png" />
+		<link rel="icon" type="image/svg+xml" href="photo.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Jorge Humberto Gaviria Botero - Portafolio</title>
 	</head>
