--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="photo.png" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Jorge Humberto Gaviria Botero - Portafolio</title>
+		<title>Jorge Humberto Gaviria Botero - Porfolio</title>
 	</head>
 	<body id="sobremi">
 		<Header />
